[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="adicionar" type="Button" parent="."]
margin_left = 109.0
margin_top = 182.0
margin_right = 344.0
margin_bottom = 231.0
text = "adicionar o número"

[node name="organizar" type="Button" parent="."]
margin_left = 109.0
margin_top = 257.0
margin_right = 342.0
margin_bottom = 306.0
text = "organizar"

[node name="Label" type="Label" parent="."]
margin_left = 546.0
margin_top = 107.0
margin_right = 721.0
margin_bottom = 157.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 86.0
margin_right = 344.0
margin_bottom = 153.0
text = "digite o número que quiser inserir"

[node name="Label2" type="Label" parent="."]
margin_left = 601.0
margin_top = 193.0
margin_right = 733.0
margin_bottom = 251.0

[connection signal="button_up" from="adicionar" to="." method="_on_adicionar_button_up"]
[connection signal="button_up" from="organizar" to="." method="_on_organizar_button_up"]
